# django-audittrail

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
audittrail/: __init__.py  admin.py  apps.py  context.py  diff.py  handlers.py  middleware.py  mixins.py  models.py  serializers.py  settings.py  urls.py  views.py
audittrail/migrations/: 0001_initial.py
tests/: models.py  settings.py  test_admin.py  test_diff.py  test_middleware.py  test_mixin.py  test_queryset.py
